Fit typo in url

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ author: Yong Lim
 avatar: /logo.png
 email: yong.lim@gmail.com
 
-url: "https://hisschool.yong.lim.com"
+url: "https://hisschool.yonglim.com"
 
 plugins:
   - jekyll-seo-tag
